# SerialWizard

./: .gitignore  CMakeLists.txt  CalculateCheckSumDialog.cpp  CalculateCheckSumDialog.h  ConvertDataDialog.cpp  ConvertDataDialog.h  DataProcessDialog.cpp  DataProcessDialog.h  FrameInfoDialog.cpp  FrameInfoDialog.h  Makefile  Makefile.Debug  Makefile.Release  README.md  SerialWizard.pro  SerialWizard.pro.user.4.8-pre1  global.cpp  global.h  main.cpp  mainwindow.cpp  mainwindow.h  object_script.SerialWizard.Debug  object_script.SerialWizard.Release  serialport.cpp  serialport.h
build-SerialWizard-Desktop_Qt_5_7_0_MinGW_32bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  object_script.SerialWizard.Debug
build-SerialWizard-Desktop_Qt_5_7_0_MinGW_32bit-Debug/debug/: moc_mainwindow.cpp
build-SerialWizard-Desktop_Qt_5_7_0_MinGW_32bit-Release/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release  object_script.SerialWizard.Release
build-SerialWizard-Desktop_Qt_5_7_0_MinGW_32bit-Release/release/: moc_CalculateCheckSumDialog.cpp  moc_FrameInfoDialog.cpp  moc_serialport.cpp
data/: AbstractReadWriter.cpp  AbstractReadWriter.h  BridgeReadWriter.cpp  BridgeReadWriter.h  SerialBridgeReadWriter.cpp  SerialBridgeReadWriter.h  SerialReadWriter.cpp  SerialReadWriter.h  TcpClientReadWriter.cpp  TcpClientReadWriter.h  TcpReadWriter.cpp  TcpReadWriter.h  TcpServerReadWriter.cpp  TcpServerReadWriter.h
serial/: FixedBytesSerialController.cpp  FixedBytesSerialController.h  FrameSerialController.cpp  FrameSerialController.h  LineSerialController.cpp  LineSerialController.h  NormalSerialController.cpp  NormalSerialController.h  SerialController.cpp  SerialController.h
utils/: FileUtil.cpp  FileUtil.h
